--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<a class="btn btn-light action-button" role="button" href="assets/assignment1.html" target="_blank">Assignment  1</a>
 					<a class="btn btn-light action-button" role="button" href="assets/assignment2.html" target="_blank">Assignment 2</a>
 					
-					<a class="btn btn-light action-button" role="button" href="https://github.com/shrikaanth/CV-assignment/blob/main/assignment/assignment3.java" target="_blank">Assignment 3</a>
+					<a class="btn btn-light action-button" role="button" href="https://github.com/shrikaanth/shri.github.io/blob/main/assets/assignment3.java" target="_blank">Assignment 3</a>
 				</center>
 				</div>
 			
