--- a/assets/assignment1.html
+++ b/assets/assignment1.html
@@ -24,7 +24,7 @@
                     <div class="collapse navbar-collapse"
                         id="navcol-1">
                         <ul class="nav navbar-nav">
-                            <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html" >Home </a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" href="https://shrikaanth.github.io/shri.github.io/" >Home </a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link active" href="assets/assignment2.html" >Assignment 2 </a></li>
                              
                             <li class="nav-item" role="presentation">
